Fixing scroll on iOS safari

--- a/static/global.css
+++ b/static/global.css
@@ -3,6 +3,13 @@
 }
 
 html,
+body,
+#sapper {
+  width: 100%;
+  height: 100%;
+}
+
+html,
 body {
   margin: 0;
   padding: 0;
